--- a/systemctl/gunicorn.service
+++ b/systemctl/gunicorn.service
@@ -1,12 +1,12 @@
 [Unit]
-Description=Your App Description
+Description=Elid web admin
 [Service]
 Type=Simple
-PIDFile=<your app root dir>/gunicorn.pid
-User=<your user>
-Group=<your user>
+PIDFile=/root/QR_Code_door_access_system/gunicorn.pid
+User=root
+Group=root
 EnvironmentFile=/etc/gunicorn/gunicorn.env
-WorkingDirectory=<your django app root project directory>
-ExecStart=<path to your virtual env>/bin/gunicorn <relative path>.wsgi:application --access-logfile /var/log/gunicorn/dev.log
+WorkingDirectory=/root/QR_Code_door_access_system/
+ExecStart=/root/env/bin/gunicorn QR_door_acces.wsgi:application --access-logfile /var/log/gunicorn/dev.log
 ExecReload=/bin/kill -s HUP $MAINPID
 ExecStop=/bin/kill -s TERM $MAINPID
